docs: complete architecture and use cases documentation sync per documenter-prompt requirements

--- a/docs/1.COLLABORATION.md
+++ b/docs/1.COLLABORATION.md
@@ -20,23 +20,37 @@ This project is an n8n community node package designed to provide Mermaid diagra
 ├── tsconfig.json - TypeScript compiler configuration
 ├── gulpfile.js - Gulp build tasks for copying icons and assets
 ├── index.js - Main entry point for the n8n node package
-│
-├── credentials/ - Authentication and API credential definitions
-│   ├── ExampleCredentialsApi.credentials.ts - Example credential template
-│   └── HttpBinApi.credentials.ts - HTTP Bin API credentials for testing
+├── build-and-deploy.sh - Build and deployment automation script
+├── CODE_OF_CONDUCT.md - Community code of conduct guidelines
+├── LICENSE.md - MIT license for the project
+├── README.md - Project documentation and setup instructions
+├── README_TEMPLATE.md - Template for project documentation
 │
 ├── nodes/ - Custom n8n node implementations
-│   ├── ExampleNode/
-│   │   └── ExampleNode.node.ts - Example node template for reference
-│   └── HttpBin/
-│       ├── HttpBin.node.ts - HTTP Bin node implementation
-│       ├── HttpBin.node.json - Node metadata and configuration
-│       ├── httpbin.svg - Node icon asset
-│       └── HttpVerbDescription.ts - HTTP operation descriptions
+│   └── MermaidCLI/
+│       ├── MermaidCli.node.ts - Main Mermaid CLI node implementation
+│       ├── MermaidCli.node.json - Node metadata and configuration
+│       ├── MermaidOperations.ts - Operation definitions and field configurations
+│       └── mermaid.svg - Node icon asset
 │
-├── .vscode/ - VS Code workspace configuration
+├── n8n_test_env/ - Testing environment for n8n integration
+│   ├── compose.n8n-service.yaml - Docker Compose configuration for n8n testing
+│   ├── Dockerfile - Custom Docker image for testing environment
+│   └── mnt/ - Mounted volume for test files and outputs
+│       ├── direct_test.png - Test output files
+│       ├── im.png, im.svg - Image test files
+│       └── test.txt - Text test file
+│
+├── dist/ - Compiled JavaScript output directory (generated during build)
 ├── docs/ - Project documentation (including this file)
+│   ├── 1.COLLABORATION.md - This collaboration guide
+│   ├── CHANGELOG.md - Project changelog and version history
+│   └── designs/ - Architecture and design documentation
+│       ├── architecture.md - System architecture documentation
+│       ├── use_cases.md - Use case documentation
+│       └── image.png - Architectural diagrams
 └── .docs/ - AI templates and contribution guidelines
+    └── ai/ - AI assistant templates and setup instructions
 ```
 
 ---
@@ -46,7 +60,8 @@ This project is an n8n community node package designed to provide Mermaid diagra
 - **n8n**: Workflow automation platform - this project creates custom nodes that extend n8n's capabilities with Mermaid diagram generation
 - **TypeScript**: Strongly-typed JavaScript for all node implementations, ensuring type safety and better development experience
 - **Node.js**: Runtime environment (minimum version 20.15) for executing the custom nodes within n8n workflows
-- **Mermaid**: Diagram and flowchart generation library (to be integrated) for creating various types of visual diagrams
+- **Mermaid**: Diagram and flowchart generation library (v11.9.0) for creating various types of visual diagrams
+- **@mermaid-js/mermaid-cli**: Command-line interface (v11.6.0) for rendering Mermaid diagrams to various output formats
 - **Gulp**: Build automation tool for copying assets (icons, SVGs) to the distribution folder
 - **ESLint**: Code linting and quality assurance with n8n-specific rules for node development
 - **Prettier**: Code formatting for consistent style across the project
@@ -58,25 +73,38 @@ This project is an n8n community node package designed to provide Mermaid diagra
 ### n8n Custom Nodes
 
 **Project Structure**
-- `nodes/`: Contains all custom n8n node implementations for Mermaid functionality
-- `credentials/`: Authentication mechanisms for external services that nodes may need to access
-- `package.json`: Defines the n8n node package configuration, including which nodes and credentials are exposed
+- `nodes/MermaidCLI/`: Contains the main Mermaid CLI node implementation for diagram generation
+  - `MermaidCli.node.ts`: Main node class implementing INodeType interface with operations for generate, validate, convert, and batch processing
+  - `MermaidCli.node.json`: Node metadata and configuration for n8n registration
+  - `MermaidOperations.ts`: Comprehensive operation definitions and field configurations for all Mermaid functionality
+  - `mermaid.svg`: Node icon displayed in n8n workflow editor
+- `package.json`: Defines the n8n node package configuration, registering the MermaidCli node with n8n
 - `dist/`: Compiled JavaScript output directory (generated during build)
 
 ### Build & Development Tools
 
 **Project Structure**
-- `tsconfig.json`: TypeScript compilation settings optimized for n8n node development
-- `gulpfile.js`: Asset copying tasks for icons and SVG files
+- `tsconfig.json`: TypeScript compilation settings optimized for n8n node development targeting ES2019
+- `gulpfile.js`: Asset copying tasks for icons and SVG files to dist directory
 - `eslintrc.js`: Code quality rules including n8n-specific linting for node development
-- `.prettierrc.js`: Code formatting configuration
+- `.prettierrc.js`: Code formatting configuration for consistent code style
+
+### Testing & Deployment
+
+**Project Structure**
+- `n8n_test_env/`: Docker-based testing environment for n8n integration testing
+  - `compose.n8n-service.yaml`: Docker Compose configuration for running n8n with custom nodes
+  - `Dockerfile`: Custom Docker image with Chromium for Mermaid CLI rendering
+  - `mnt/`: Mounted volume for test files and diagram outputs
+- `build-and-deploy.sh`: Automated build and deployment script for CI/CD processes
 
 ### Documentation & Configuration
 
 **Project Structure**
 - `docs/`: Project documentation and collaboration guides
+  - `designs/`: Architecture documentation and use case specifications
 - `.docs/`: AI templates and setup instructions for contributors
-- `.vscode/`: VS Code specific settings for consistent development environment
+- Configuration files: `.editorconfig`, `.gitignore`, `.npmignore` for development environment consistency
 
 ## Tools
 
@@ -88,9 +116,9 @@ This project is an n8n community node package designed to provide Mermaid diagra
 - Global installation of n8n: `npm install n8n -g`
 
 **Configurations n8n**
-- `package.json` n8n section: Defines which nodes and credentials are registered with n8n
-- `nodes/*/node.ts`: Individual node implementations following n8n's INodeType interface
-- `credentials/*.credentials.ts`: Credential definitions for external service authentication
+- `package.json` n8n section: Defines which nodes are registered with n8n (currently MermaidCli node)
+- `nodes/MermaidCLI/MermaidCli.node.ts`: Main node implementation following n8n's INodeType interface
+- `nodes/MermaidCLI/MermaidCli.node.json`: Node metadata for n8n registration and display properties
 
 ### Tool: TypeScript
 
@@ -109,7 +137,18 @@ This project is an n8n community node package designed to provide Mermaid diagra
 - Node.js file system access
 
 **Configurations Gulp**
-- `gulpfile.js`: Asset copying tasks for node icons and credential images
+- `gulpfile.js`: Asset copying tasks for node icons from nodes/MermaidCLI/ to dist directory
+
+### Tool: Docker
+
+**Requirements**
+- Docker Engine for containerized testing environment
+- Docker Compose for orchestrating n8n testing services
+
+**Configurations Docker**
+- `n8n_test_env/Dockerfile`: Custom image with Chromium browser for Mermaid CLI rendering
+- `n8n_test_env/compose.n8n-service.yaml`: Docker Compose configuration for n8n testing environment
+- Environment variables for Puppeteer and Chrome in containerized environment
 
 ## Setup & Development
 
@@ -119,6 +158,8 @@ This project is an n8n community node package designed to provide Mermaid diagra
 - npm package manager
 - git for version control
 - n8n installed globally: `npm install n8n -g`
+- Docker and Docker Compose (for testing environment)
+- Chromium browser (for Mermaid CLI diagram rendering)
 - Recommended: n8n development environment setup following official documentation
 
 ### Install Dependencies
@@ -144,15 +185,20 @@ npm run lint
 
 # Fix linting issues automatically
 npm run lintfix
+
+# Test in Docker environment
+cd n8n_test_env
+docker-compose -f compose.n8n-service.yaml up
 ```
 
 ## Build & Deployment
 
 ### Build
 
-- **TypeScript Compilation**: `npm run build` - Compiles TypeScript to JavaScript and copies icon assets
+- **TypeScript Compilation**: `npm run build` - Compiles TypeScript to JavaScript and copies icon assets to dist directory
 - **Development Mode**: `npm run dev` - Runs TypeScript compiler in watch mode for active development
-- **Asset Processing**: Gulp automatically copies PNG/SVG icons from nodes and credentials to dist folder
+- **Asset Processing**: Gulp automatically copies SVG icons from nodes/MermaidCLI to dist folder
+- **Automated Build**: `build-and-deploy.sh` - Comprehensive build and deployment script
 
 ### Deploy
 
@@ -164,6 +210,9 @@ npm run prepublishOnly
 
 # Publish to npm registry
 npm publish
+
+# Automated deployment
+./build-and-deploy.sh
 ```
 
 For n8n cloud verification:
@@ -194,15 +243,21 @@ n8n start
 
 # Run with development credentials
 n8n start --tunnel
+
+# Test in Docker environment
+cd n8n_test_env
+docker-compose -f compose.n8n-service.yaml up
 ```
 
 **DEBUGGING: GOTCHAs AND RECOVERY**
 
 - The ERROR: "Unexpected eof" (end of file) | Can typically mean there is a missing or extra bracket/parenthesis. However, can be some times caused by mis-aligned quote types (i.e. opening quote: \' while closing quote '") or additionally by missing tags. Please rewrite the given file to fix the error even if it looks correct. Mistakes happen.
 - n8n Node Type Errors: Ensure INodeType interface is properly implemented with required description properties
-- Credential Loading Issues: Verify credential files are properly exported and referenced in package.json n8n section
-- Icon Display Problems: Check that SVG/PNG files are in correct directories and gulp build task copies them to dist
+- Mermaid CLI Execution Errors: Verify Chromium/Chrome browser is available and accessible for diagram rendering
+- Docker Environment Issues: Check Docker containers have proper permissions and browser dependencies installed
+- Icon Display Problems: Check that SVG files are in correct directories and gulp build task copies them to dist
 - TypeScript Import Errors: Use n8n-workflow imports correctly and ensure all required types are imported
+- Subprocess Execution Failures: Verify mermaid CLI (@mermaid-js/mermaid-cli) is properly installed and accessible
 
 ## Git Commit Best Practices
 
